--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vera",
-  "homepage": "https://sostrovsky.github.io/valentines_day",
+  "homepage": "https://sostrovsky.github.io/heart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
